# multiChainer

./: CMakeLists.txt  README.md
Assets/: app.js  index.html  styles.css
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: EnvelopeFollower.cpp  EnvelopeFollower.h  FFTAnalyzer.cpp  FFTAnalyzer.h  LinearPhaseCrossover.cpp  LinearPhaseCrossover.h  MidiTrigger.cpp  MidiTrigger.h  MultibandDucker.cpp  MultibandDucker.h
Source/ui/: WebUIBridge.cpp  WebUIBridge.h
